# chkatt

./: .ccls  .gitignore  Makefile  README.md  compile_commands.json  meson.build  pyproject.toml
chat_bochs.egg-info/: PKG-INFO  SOURCES.txt
src/: bits.c  chkatt_index.py  client.py  dbctrl.c  global.py  prompt.c  read_conf.py  server.py  ui.py  user.c  user.py
src/client/: .client.py.swp  chkatt_index.py  client.py
src/client/ui/: chkatt_index.py  ui.py
src/public/: asclient.py  ascserver.py  global.h
src/server/: dbctrl.c  server.py
src/server/models/: drop_user.sql  meson.build  user.sql
